--- a/cardano-address-book.cabal
+++ b/cardano-address-book.cabal
@@ -36,6 +36,36 @@ library
     -fno-omit-interface-pragmas 
     -fno-specialise
 
+test-suite beacon-tests
+  import: lang
+  type: exitcode-stdio-1.0
+  main-is: Test.hs
+  hs-source-dirs: test
+  default-language: Haskell2010
+  ghc-options:
+    -fobject-code 
+    -fno-ignore-interface-pragmas 
+    -fno-omit-interface-pragmas 
+    -fno-specialise
+  other-modules:
+    Tests.BeaconTraces
+  build-depends:
+    cardano-address-book,
+    plutus-contract,
+    plutus-tx,
+    plutus-ledger-api,
+    plutus-ledger,
+    plutus-ledger-constraints,
+    plutus-tx-plugin,
+    aeson,
+    plutus-script-utils,
+    text,
+    playground-common,
+    containers,
+    data-default,
+    tasty,
+    lens,
+
 executable cardano-address-book
     import: lang
     main-is:          Main.hs
