--- a/cardano-address-book.cabal
+++ b/cardano-address-book.cabal
@@ -71,10 +71,12 @@ executable cardano-address-book
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+      CLI.Parsers,
+      CLI.Types,
+      CLI.Run
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    cardano-address-book
+    build-depends:    cardano-address-book,
+                      optparse-applicative
     hs-source-dirs:   app
     default-language: Haskell2010
