Changed mint policy to require pubkey signature on minting.

--- a/cabal.project
+++ b/cabal.project
@@ -27,8 +27,8 @@ with-compiler: ghc-8.10.7
 write-ghc-environment-files: never
 
 -- Always build tests and benchmarks.
-tests: false
-benchmarks: false
+tests: true
+benchmarks: true
 
 -- The only sensible test display option.
 test-show-details: direct
