--- a/cardano-address-book.cabal
+++ b/cardano-address-book.cabal
@@ -43,10 +43,7 @@ test-suite beacon-tests
   hs-source-dirs: test
   default-language: Haskell2010
   ghc-options:
-    -fobject-code 
-    -fno-ignore-interface-pragmas 
-    -fno-omit-interface-pragmas 
-    -fno-specialise
+    -threaded -rtsopts -with-rtsopts=-N
   other-modules:
     Tests.BeaconTraces
   build-depends:
